fix: visibility issue for abilities in menu

--- a/styles.css
+++ b/styles.css
@@ -230,6 +230,11 @@ nav {
     background-color: rgba(0, 0, 0, 0.4);
   }
 
+  nav .skill img {
+    background: rgba(0, 0, 0, 0.25);
+    border-radius: 50%;
+  }
+
   /* Advanced filters and sorting options */
   nav .advanced {
     display: flex;
